Fix font size issues on mobile

--- a/nt/en/css/books.css
+++ b/nt/en/css/books.css
@@ -1,38 +1,10 @@
 body {
   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  font-size: large;
 }
 
 a {
   text-decoration: none;
-}
-
-.chapter {
-  font-weight: bolder;
-  font-size: larger
-}
-
-.xlarger {
-  font-size: x-large;
-}
-
-.larger {
-  font-size: larger;
-}
-
-.large {
-  font-size: large;
-}
-
-.right {
-  text-align: right;
-}
-
-div.highlight {
-  background-color: #FFFF00;
-}
-
-.center {
-  text-align: center;
 }
 
 h5 {
@@ -42,17 +14,34 @@ h5 {
   margin: 0;
 }
 
+div.highlight {
+  background-color: #FFFF00;
+}
+
 div.title {
   font-style: italic;
+}
+
+div.text div[id] {
+  cursor: pointer;
+}
+
+.right {
+  text-align: right;
+}
+
+.center {
+  text-align: center;
+}
+
+.chapter {
+  font-weight: bolder;
+  font-size: larger
 }
 
 .no {
   font-size: smaller;
   font-weight: bold;
-}
-
-div.text div[id] {
-  cursor: pointer;
 }
 
 .vtop {
